# aiosocketpool

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  python-app.yml
aio_socketpool/: __init__.py
aiosocketpool/: __init__.py
tests/: conftest.py  test_socketpool.py
