[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiosocketpool"
description = "An asyncio-compatible socket pool"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Roo Sczesnak", email = "andrewscz@gmail.com" },
]
keywords = ["asyncio", "socketpool", "aiosocketpool"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
  "black>=19.3b0",
  "flake8>=3.7.8",
  "mypy>=1.19.1",
  "pip-tools>=4.2.0",
  "pydocstyle>=4.0.0",
  "pytest>=5.1.0",
  "pytest-asyncio>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/polyatail/aiosocketpool"
Repository = "https://github.com/polyatail/aiosocketpool"

[tool.setuptools]

[tool.setuptools.dynamic]
version = { attr = "aiosocketpool.version.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "test*"]

[tool.flake8]
ignore = ["E203", "W503"]
max-line-length = 100
